added results for one shot prediction on validation dataset

--- a/Internal_validation/Int_validation.ipynb
+++ b/Internal_validation/Int_validation.ipynb
@@ -269,55 +269,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "d53b8495-3bac-4ee3-9af3-7f0c1a758bc6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bootstrap Evaluation done for -- xgb_non_calibrated\n",
-      "Bootstrap Evaluation done for -- cb_non_calibrated\n",
-      "Bootstrap Evaluation done for -- lgbm_non_calibrated\n",
-      "Bootstrap Evaluation done for -- gb_non_calibrated\n",
-      "Bootstrap Evaluation done for -- rf_non_calibrated\n",
-      "Bootstrap Evaluation done for -- nb_non_calibrated\n",
-      "Bootstrap Evaluation done for -- svm_non_calibrated\n",
-      "Bootstrap Evaluation done for -- knn_non_calibrated\n",
-      "Bootstrap Evaluation done for -- lr_non_calibrated\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "probabilities_df_non_calibrated, metrics_df_non_calibrated = utils.evaluate_models_with_ci(non_calibrated_models, non_calibrated_model_names, \n",
-    "                                                                                   X_int_val, y_int_val)"
+    "# probabilities_df_non_calibrated, metrics_df_non_calibrated = utils.evaluate_models_with_ci(non_calibrated_models, non_calibrated_model_names, \n",
+    "#                                                                                    X_int_val, y_int_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "b4db3d5c-5c42-4c2b-aeed-da956dcb4ef0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bootstrap Evaluation done for -- xgb\n",
-      "Bootstrap Evaluation done for -- cb\n",
-      "Bootstrap Evaluation done for -- lgbm\n",
-      "Bootstrap Evaluation done for -- gb\n",
-      "Bootstrap Evaluation done for -- rf\n",
-      "Bootstrap Evaluation done for -- nb\n",
-      "Bootstrap Evaluation done for -- svm\n",
-      "Bootstrap Evaluation done for -- knn\n",
-      "Bootstrap Evaluation done for -- lr\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "probabilities_df_calibrated, metrics_df_calibrated = utils.evaluate_models_with_ci(models, model_names, X_int_val, y_int_val)"
+    "# probabilities_df_calibrated, metrics_df_calibrated = utils.evaluate_models_with_ci(models, model_names, X_int_val, y_int_val)"
    ]
   },
   {
@@ -330,15 +298,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "f347985d-750a-4bc6-a28b-64f0a87294a9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "probabilities_df_calibrated.to_csv('../results/int_val_data/model_probabilities_calibrated.csv', index=False)\n",
-    "metrics_df_calibrated.to_csv('../results/int_val_data/model_metrics_calibrated.csv', index=False)\n",
-    "probabilities_df_non_calibrated.to_csv('../results/int_val_data/model_probabilities_non_calibrated.csv', index=False)\n",
-    "metrics_df_non_calibrated.to_csv('../results/int_val_data/model_metrics_non_calibrated.csv', index=False)"
+    "# probabilities_df_calibrated.to_csv('../results/int_val_data/model_probabilities_calibrated.csv', index=False)\n",
+    "# metrics_df_calibrated.to_csv('../results/int_val_data/model_metrics_calibrated.csv', index=False)\n",
+    "# probabilities_df_non_calibrated.to_csv('../results/int_val_data/model_probabilities_non_calibrated.csv', index=False)\n",
+    "# metrics_df_non_calibrated.to_csv('../results/int_val_data/model_metrics_non_calibrated.csv', index=False)"
    ]
   },
   {
@@ -351,51 +319,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "3c6dff2e-732f-49cf-af05-56354fdd1103",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['../results/int_val_data/metrics_df_non_calibrated.joblib']"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "joblib.dump(probabilities_df_calibrated, '../results/int_val_data/probabilities_df_calibrated.joblib')\n",
-    "joblib.dump(metrics_df_calibrated, '../results/int_val_data/metrics_df_calibrated.joblib')\n",
-    "joblib.dump(probabilities_df_non_calibrated, '../results/int_val_data/probabilities_df_non_calibrated.joblib')\n",
-    "joblib.dump(metrics_df_non_calibrated, '../results/int_val_data/metrics_df_non_calibrated.joblib')"
+    "# joblib.dump(probabilities_df_calibrated, '../results/int_val_data/probabilities_df_calibrated.joblib')\n",
+    "# joblib.dump(metrics_df_calibrated, '../results/int_val_data/metrics_df_calibrated.joblib')\n",
+    "# joblib.dump(probabilities_df_non_calibrated, '../results/int_val_data/probabilities_df_non_calibrated.joblib')\n",
+    "# joblib.dump(metrics_df_non_calibrated, '../results/int_val_data/metrics_df_non_calibrated.joblib')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "254581b6-935f-4708-bb8a-b0eda9a4f20d",
+   "metadata": {},
+   "source": [
+    "## One shot evaluation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7b13c762-292c-4934-beb0-d8226d90641c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "c430c9a2-aba7-4edd-a409-32dbf48bafa2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Evaluate calibrated models\n",
+    "probabilities_df_one_shot, metrics_df_oneshot = utils.evaluate_models(models, model_names, X_int_val, y_int_val)\n",
+    "\n",
+    "# Evaluate non-calibrated models\n",
+    "probabilities_df_nc_one_shot, metrics_df_nc_one_shot = utils.evaluate_models(non_calibrated_models, non_calibrated_model_names, X_int_val, y_int_val)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "b3326aad-041b-4f32-9f1b-fcf47e9dee09",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Save the dataframes to CSV files\n",
+    "probabilities_df_one_shot.to_csv('../results/int_val_data/probabilities_df_one_shot.csv', index=False)\n",
+    "metrics_df_oneshot.to_csv('../results/int_val_data/metrics_df_oneshot.csv', index=False)\n",
+    "probabilities_df_nc_one_shot.to_csv('../results/int_val_data/probabilities_df_nc_one_shot.csv', index=False)\n",
+    "metrics_df_nc_one_shot.to_csv('../results/int_val_data/metrics_df_nc_one_shot.csv', index=False)"
+   ]
   },
   {
    "cell_type": "code",
